backends/tfhe-cuda-backend/src/bindings.rs

extern "C" {
    pub fn cuda_integer_decompress_radix_ciphertext_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        lwe_array_out: *mut ffi::c_void,
        glwe_in: *const ffi::c_void,
        indexes_array: *const u32,
        indexes_array_size: u32,
        bsks: *const *mut ffi::c_void,
        mem_ptr: *mut i8,
    );
}
extern "C" {
    pub fn cleanup_cuda_integer_compress_radix_ciphertext_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr_void: *mut *mut i8,
    );
}
extern "C" {
    pub fn cleanup_cuda_integer_decompress_radix_ciphertext_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr_void: *mut *mut i8,
    );
}
pub const OUTPUT_CARRY_NONE: OUTPUT_CARRY = 0;
pub const OUTPUT_CARRY_GENERATED: OUTPUT_CARRY = 1;
pub const OUTPUT_CARRY_PROPAGATED: OUTPUT_CARRY = 2;
pub type OUTPUT_CARRY = ffi::c_uint;
pub const SHIFT_OR_ROTATE_TYPE_LEFT_SHIFT: SHIFT_OR_ROTATE_TYPE = 0;
pub const SHIFT_OR_ROTATE_TYPE_RIGHT_SHIFT: SHIFT_OR_ROTATE_TYPE = 1;
pub const SHIFT_OR_ROTATE_TYPE_LEFT_ROTATE: SHIFT_OR_ROTATE_TYPE = 2;
pub const SHIFT_OR_ROTATE_TYPE_RIGHT_ROTATE: SHIFT_OR_ROTATE_TYPE = 3;
pub type SHIFT_OR_ROTATE_TYPE = ffi::c_uint;
pub const BITOP_TYPE_BITAND: BITOP_TYPE = 0;
pub const BITOP_TYPE_BITOR: BITOP_TYPE = 1;
pub const BITOP_TYPE_BITXOR: BITOP_TYPE = 2;
pub const BITOP_TYPE_SCALAR_BITAND: BITOP_TYPE = 3;
pub const BITOP_TYPE_SCALAR_BITOR: BITOP_TYPE = 4;
pub const BITOP_TYPE_SCALAR_BITXOR: BITOP_TYPE = 5;
pub type BITOP_TYPE = ffi::c_uint;
pub const COMPARISON_TYPE_EQ: COMPARISON_TYPE = 0;
pub const COMPARISON_TYPE_NE: COMPARISON_TYPE = 1;
pub const COMPARISON_TYPE_GT: COMPARISON_TYPE = 2;
pub const COMPARISON_TYPE_GE: COMPARISON_TYPE = 3;
pub const COMPARISON_TYPE_LT: COMPARISON_TYPE = 4;
pub const COMPARISON_TYPE_LE: COMPARISON_TYPE = 5;
pub const COMPARISON_TYPE_MAX: COMPARISON_TYPE = 6;
pub const COMPARISON_TYPE_MIN: COMPARISON_TYPE = 7;
pub type COMPARISON_TYPE = ffi::c_uint;
pub const CMP_ORDERING_IS_INFERIOR: CMP_ORDERING = 0;
pub const CMP_ORDERING_IS_EQUAL: CMP_ORDERING = 1;
pub const CMP_ORDERING_IS_SUPERIOR: CMP_ORDERING = 2;
pub type CMP_ORDERING = ffi::c_uint;
pub const SIGNED_OPERATION_ADDITION: SIGNED_OPERATION = 1;
pub const SIGNED_OPERATION_SUBTRACTION: SIGNED_OPERATION = -1;
pub type SIGNED_OPERATION = ffi::c_int;
extern "C" {
    pub fn scratch_cuda_apply_univariate_lut_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr: *mut *mut i8,
        input_lut: *const ffi::c_void,
        lwe_dimension: u32,
        glwe_dimension: u32,
        polynomial_size: u32,
        ks_level: u32,
        ks_base_log: u32,
        pbs_level: u32,
        pbs_base_log: u32,
        grouping_factor: u32,
        input_lwe_ciphertext_count: u32,
        message_modulus: u32,
        carry_modulus: u32,
        pbs_type: PBS_TYPE,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn cuda_apply_univariate_lut_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        output_radix_lwe: *mut ffi::c_void,
        input_radix_lwe: *const ffi::c_void,
        mem_ptr: *mut i8,
        ksks: *const *mut ffi::c_void,
        bsks: *const *mut ffi::c_void,
        num_blocks: u32,
    );
}
extern "C" {
    pub fn cleanup_cuda_apply_univariate_lut_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr_void: *mut *mut i8,
    );
}
extern "C" {
    pub fn scratch_cuda_apply_bivariate_lut_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr: *mut *mut i8,
        input_lut: *const ffi::c_void,
        lwe_dimension: u32,
        glwe_dimension: u32,
        polynomial_size: u32,
        ks_level: u32,
        ks_base_log: u32,
        pbs_level: u32,
        pbs_base_log: u32,
        grouping_factor: u32,
        input_lwe_ciphertext_count: u32,
        message_modulus: u32,
        carry_modulus: u32,
        pbs_type: PBS_TYPE,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn cuda_apply_bivariate_lut_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        output_radix_lwe: *mut ffi::c_void,
        input_radix_lwe_1: *const ffi::c_void,
        input_radix_lwe_2: *const ffi::c_void,
        mem_ptr: *mut i8,
        ksks: *const *mut ffi::c_void,
        bsks: *const *mut ffi::c_void,
        num_blocks: u32,
        shift: u32,
    );
}
extern "C" {
    pub fn cleanup_cuda_apply_bivariate_lut_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr_void: *mut *mut i8,
    );
}
extern "C" {
    pub fn cuda_apply_many_univariate_lut_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        output_radix_lwe: *mut ffi::c_void,
        input_radix_lwe: *const ffi::c_void,
        mem_ptr: *mut i8,
        ksks: *const *mut ffi::c_void,
        bsks: *const *mut ffi::c_void,
        num_blocks: u32,
        num_luts: u32,
        lut_stride: u32,
    );
}
extern "C" {
    pub fn scratch_cuda_full_propagation_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr: *mut *mut i8,
        lwe_dimension: u32,
        glwe_dimension: u32,
        polynomial_size: u32,
        ks_level: u32,
        ks_base_log: u32,
        pbs_level: u32,
        pbs_base_log: u32,
        grouping_factor: u32,
        message_modulus: u32,
        carry_modulus: u32,
        pbs_type: PBS_TYPE,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn cuda_full_propagation_64_inplace(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        input_blocks: *mut ffi::c_void,
        mem_ptr: *mut i8,
        ksks: *const *mut ffi::c_void,
        bsks: *const *mut ffi::c_void,
        num_blocks: u32,
    );
}
extern "C" {
    pub fn cleanup_cuda_full_propagation(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr_void: *mut *mut i8,
    );
}
extern "C" {
    pub fn scratch_cuda_integer_mult_radix_ciphertext_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr: *mut *mut i8,
        message_modulus: u32,
        carry_modulus: u32,
        glwe_dimension: u32,
        lwe_dimension: u32,
        polynomial_size: u32,
        pbs_base_log: u32,
        pbs_level: u32,
        ks_base_log: u32,
        ks_level: u32,
        grouping_factor: u32,
        num_blocks: u32,
        pbs_type: PBS_TYPE,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn cuda_integer_mult_radix_ciphertext_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        radix_lwe_out: *mut ffi::c_void,
        radix_lwe_left: *const ffi::c_void,
        radix_lwe_right: *const ffi::c_void,
        bsks: *const *mut ffi::c_void,
        ksks: *const *mut ffi::c_void,
        mem_ptr: *mut i8,
        polynomial_size: u32,
        num_blocks: u32,
    );
}
extern "C" {
    pub fn cleanup_cuda_integer_mult(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr_void: *mut *mut i8,
    );
}
extern "C" {
    pub fn cuda_negate_integer_radix_ciphertext_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        lwe_array_out: *mut ffi::c_void,
        lwe_array_in: *const ffi::c_void,
        lwe_dimension: u32,
        lwe_ciphertext_count: u32,
        message_modulus: u32,
        carry_modulus: u32,
    );
}
extern "C" {
    pub fn cuda_scalar_addition_integer_radix_ciphertext_64_inplace(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        lwe_array: *mut ffi::c_void,
        scalar_input: *const ffi::c_void,
        lwe_dimension: u32,
        lwe_ciphertext_count: u32,
        message_modulus: u32,
        carry_modulus: u32,
    );
}
extern "C" {
    pub fn scratch_cuda_integer_radix_logical_scalar_shift_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr: *mut *mut i8,
        glwe_dimension: u32,
        polynomial_size: u32,
        big_lwe_dimension: u32,
        small_lwe_dimension: u32,
        ks_level: u32,
        ks_base_log: u32,
        pbs_level: u32,
        pbs_base_log: u32,
        grouping_factor: u32,
        num_blocks: u32,
        message_modulus: u32,
        carry_modulus: u32,
        pbs_type: PBS_TYPE,
        shift_type: SHIFT_OR_ROTATE_TYPE,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn cuda_integer_radix_logical_scalar_shift_kb_64_inplace(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        lwe_array: *mut ffi::c_void,
        shift: u32,
        mem_ptr: *mut i8,
        bsks: *const *mut ffi::c_void,
        ksks: *const *mut ffi::c_void,
        num_blocks: u32,
    );
}
extern "C" {
    pub fn scratch_cuda_integer_radix_arithmetic_scalar_shift_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr: *mut *mut i8,
        glwe_dimension: u32,
        polynomial_size: u32,
        big_lwe_dimension: u32,
        small_lwe_dimension: u32,
        ks_level: u32,
        ks_base_log: u32,
        pbs_level: u32,
        pbs_base_log: u32,
        grouping_factor: u32,
        num_blocks: u32,
        message_modulus: u32,
        carry_modulus: u32,
        pbs_type: PBS_TYPE,
        shift_type: SHIFT_OR_ROTATE_TYPE,
        allocate_gpu_memory: bool,
    );
}
extern "C" {
    pub fn cuda_integer_radix_arithmetic_scalar_shift_kb_64_inplace(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        lwe_array: *mut ffi::c_void,
        shift: u32,
        mem_ptr: *mut i8,
        bsks: *const *mut ffi::c_void,
        ksks: *const *mut ffi::c_void,
        num_blocks: u32,
    );
}
extern "C" {
    pub fn cleanup_cuda_integer_radix_logical_scalar_shift(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr_void: *mut *mut i8,
    );
}
extern "C" {
    pub fn cleanup_cuda_integer_radix_arithmetic_scalar_shift(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr_void: *mut *mut i8,
    );
}
extern "C" {
    pub fn scratch_cuda_integer_radix_shift_and_rotate_kb_64(
        streams: *const *mut ffi::c_void,
        gpu_indexes: *const u32,
        gpu_count: u32,
        mem_ptr: *mut *mut i8,
        glwe_dimension: u32,
        polynomial_size: u32,
        big_lwe_dimension: u32,
        small_lwe_dimension: u32,
        ks_level: u32,
        ks_base_log: u32,
        pbs_level: u32,
        pbs_base_log: u32,
        grouping_factor: u32,
        num_blocks: u32,
        message_modulus: u32,
        carry_modulus: u32,
        pbs_type: PBS_TYPE,
        shift_type: SHIFT_OR_ROTATE_TYPE,
        is_signed: bool,
        allocate_gpu_memory: bool,
    );
}
